--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<?php
-echo "<header>Nome: Benjamim A. de Freitas <br> RM: 23256 <br> Serie: 2° Mtec DS</header>"
-
-
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,6 +9,7 @@ echo "<header>Nome: Benjamim A. de Freitas <br> RM: 23256 <br> Serie: 2° Mtec D
     <header>
     <br>
     <p><img src="shared image.jpg" alt="branco privilegiado" width="130" height="180"></p>
+    <p>Nome: Benjamim A. de Freitas <br> RM: 23256 <br> Serie: 2° Mtec DS</header></p>
     <h3>Exercícios em PHP</h3>
     </header>
     <div class="container">
